--- a/rootdir/init.sc6820i.rc
+++ b/rootdir/init.sc6820i.rc
@@ -5,22 +5,14 @@ on early-init
     mkdir /efs 0771 radio system
 
 on init
-# See storage config details at http://source.android.com/tech/storage/
-    mkdir /mnt/shell/emulated 0700 shell shell
-    mkdir /storage 0550 system sdcard_r
-    mkdir /storage/emulated 0555 root root
-
-# External storage directories
-    mkdir /mnt/media_rw/sdcard0 0700 media_rw media_rw
-    mkdir /mnt/media_rw/sdcard1 0700 media_rw media_rw
-
-    mkdir /storage/sdcard0 0700 root root
-    mkdir /storage/sdcard1 0700 root root
-
-    export EXTERNAL_STORAGE /storage/emulated/legacy
+	stop ril-daemon
+	
+	symlink /sdcard /mnt/sdcard
+	symlink /sdcard /storage/sdcard0
+	
     export SECONDARY_STORAGE /storage/sdcard1
-    export EMULATED_STORAGE_SOURCE /mnt/shell/emulated
-    export EMULATED_STORAGE_TARGET /storage/emulated
+    mkdir /mnt/media_rw/sdcard1 0700 media_rw media_rw
+    mkdir /storage/sdcard1 0700 root root
 
 # For backwards compatibility
     symlink /storage/emulated/legacy /sdcard
